2013-05-05  Bean  <bean123ch@gmail.com>

	* grub-core/commands/testspeed.c: New command testspeed.

2013-05-05  Vladimir Serbinenko  <phcoder@gmail.com>

	Factor-out human-size printing.

2013-05-04  Vladimir Serbinenko  <phcoder@gmail.com>

	Agglomerate more mallocs to speed-up gfxterm.

2013-05-04  Vladimir Serbinenko  <phcoder@gmail.com>

	Speed-up gfxterm by slightly agglomerating mallocs.

2013-05-04  Vladimir Serbinenko  <phcoder@gmail.com>

	More video checks.

2013-05-04  Vladimir Serbinenko  <phcoder@gmail.com>

	Speed-up gfxterm by saving intermediate results in index+alpha
	format.

2013-05-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/tests/lib/functional_test.c: Don't stop on first failed
	test.

2013-05-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/menu_text.c (menu_clear_timeout): Clear second
	line of timeout as it may contain the rest of long line.

2013-05-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/main.c: Fix freed memory dereference.

2013-05-04  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix several memory leaks.

2013-05-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/menu.c (run_menu): Fix timeout reference point.

2013-05-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/gettext/gettext.c: Try $lang.gmo as well.

2013-05-04  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix test -a and -o precedence.
	Reported by: adrian15.

2013-05-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/font/font.c (grub_font_construct_glyph): Fix memory leak.

2013-05-03  Andrey Borzenkov <arvidjaar@gmail.com>

	Rename grub-core/tests/checksums.c into grub-core/tests/checksums.h
	and add it as source to functional_test module.

2013-05-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/tests/video_checksum.c: Don't set GENERATE_MODE.

2013-05-03  Vladimir Serbinenko  <phcoder@gmail.com>

	New series of tests for gfxterm and gfxmenu.
